# web-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/library-scripts/: common-debian.sh  node-debian.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-build.yml  python-ci.yml  python-pr.yml
docs/: conf.py  index.rst
kubernetes/base/: configmaps.yaml  deployment.yaml  kustomization.yaml  service-account.yaml  service.yaml
kubernetes/overlays/dev/: configmaps.yaml  ingress-route.yaml  kustomization.yaml  middlewares.yaml  namespace.yaml
requirements/: app.in  deploy.in  dev.in  docs.in  tests.in
scripts/: entrypoint.sh  migrate-db.sh  run-dev.sh  seed-db.sh  setup-db.sh  setup-venv.sh  update-requirements.sh
src/: appserver.py  flask-app.ini  wsgi.py
src/static/components/: Messages.js
src/static/css/: common.css
src/static/js/: cookies.js
src/sweetrpg_COMPONENT_web/: __init__.py
src/sweetrpg_COMPONENT_web/application/: __init__.py  config.py  constants.py  main.py
src/sweetrpg_COMPONENT_web/application/auth/: __init__.py
src/sweetrpg_COMPONENT_web/application/blueprints/: __init__.py  exceptions.py  setup.py  validators.py
src/templates/: home.html  index.html
src/templates/errors/: 404.html  error.html
src/templates/layout/: base.html
src/templates/macros/: form_macros.html
src/templates/partials/: footer.html  header.html
tests/: test_this.py
(+5 files in other folders)
