[bdist_wheel]
universal = 1

[metadata]
name = sweetrpg-COMPONENT-web
version = attr: sweetrpg_library_web.__version__
url = https://sweetrpg.com
project_urls =
    Documentation = https://sweetrpg.github.io/sweetrpg/COMPONENT/web
license = MIT
author = Paul Schifferer
author_email = dm@sweetrpg.com
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
package_dir = = src
include_package_data = true
python_required = >= 3.11

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sweetrpg-COMPONENT-web = sweetrpg_COMPONENT_web.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    sweetrpg_COMPONENT_web
    tests

[coverage:paths]
source =
    src
    */site-packages

[semantic_release]
version_variable = src/sweetrpg_COMPONENT_web/__init__.py:__version__
branch = develop
